--- a/.gitignore
+++ b/.gitignore
@@ -94,7 +94,7 @@ coverage.xml
 .ipynb_checkpoints/
 .profile_default/
 .ipython/
-*.ipynb
+# *.ipynb
 
 ############################################
 # Type checking / linters
@@ -142,7 +142,7 @@ credentials/
 # Project-specific
 ############################################
 temp/
-data/
+/data/
 outputs/
 wandb/
 mlruns/
@@ -159,3 +159,6 @@ reports/
 debug/
 cache/
 tmp/
+src/biosignals/agent/v1/
+campaign_dashboard.html
+campaign_data.json
