--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
   push:
   pull_request:
 
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -25,15 +29,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-
-      - name: Ruff (lint)
-        run: ruff check .
-
-      - name: Ruff (format check)
-        run: ruff format --check .
-
-      - name: Mypy
-        run: mypy src
 
       - name: Pytest
         run: pytest -q
