--- a/configs/transforms/wearables/ppg_acc_basic.yaml
+++ b/configs/transforms/wearables/ppg_acc_basic.yaml
@@ -20,7 +20,8 @@ train:
       low_hz: 0.5
       high_hz: 8.0
       order: 4
-      modalities: [${transforms.primary_raw}]
+      modalities:
+        - ${transforms.primary_raw}
       default_fs: 100.0
 
     - _target_: biosignals.data.transforms.signal_ops.ZScorePerChannel
@@ -48,7 +49,8 @@ val:
       low_hz: 0.5
       high_hz: 8.0
       order: 4
-      modalities: [${transforms.primary_raw}]
+      modalities:
+        - ${transforms.primary_raw}
       default_fs: 100.0
 
     - _target_: biosignals.data.transforms.signal_ops.ZScorePerChannel
